<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.RememberMeDailyActivity">

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar">
    </include>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/titleLayout"
                android:layout_marginTop="10dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_title"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:maxLength="50" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/messageLayout"
                android:layout_marginTop="20dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">

                <EditText
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_message"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:singleLine="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hourLayout"
                android:layout_marginTop="20dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">

                <EditText
                    android:id="@+id/hour"
                    android:hint="@string/prompt_hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:focusable="false"
                    android:clickable="true"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/repetitionLayout"
                android:layout_marginTop="20dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">

                <EditText
                    android:id="@+id/repetition"
                    android:hint="@string/prompt_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:focusable="false"
                    android:clickable="false"
                    android:text="@string/title_tab_repeat_weekly"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton android:id="@+id/radio_mon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_chek_mon"
                    android:checked="true"/>

                <RadioButton android:id="@+id/radio_tue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_chek_tue"/>

                <RadioButton android:id="@+id/radio_wed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_chek_wed" />

                <RadioButton android:id="@+id/radio_thu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_chek_thu" />

                <RadioButton android:id="@+id/radio_fri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_chek_fri" />

                <RadioButton android:id="@+id/radio_sat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_chek_sat" />

                <RadioButton android:id="@+id/radio_sun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_chek_sun" />

            </RadioGroup>

            <Button
                android:id="@+id/reminder_create_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/action_create_reminder"
                android:textStyle="bold"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"/>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loading_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="bottom|center_horizontal"
        android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>